# granular_cmap_render

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  grain.cpp
include/: colorbar.hpp  colormap.hpp  colormap_renderer.hpp  colormaps.hpp  grain.hpp  histogram_magnitude_2d.hpp  parser.hpp  renderer.hpp  thread_pool.hpp
renders/: pressure_histogram_data.csv  pressure_histogram_data.txt
scripts/: doVideo.sh  plot-magnitude-map.py
src/: colorbar.cpp  colormaps.cpp  grain.cpp  histogram_magnitude_2d.cpp  main.cpp  parser.cpp  renderer.cpp  thread_pool.cpp
